--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,5 +23,11 @@ classifiers = [
 
 dependencies = [
     "flask>=2.0",
-    "peewee>=3.15.0"
+    "peewee>=3.15.0",
+    "jinja2>=3.0.1"
+]
+
+[tool.pytest.ini_options]
+pythonpath = [
+  ".","src"
 ]
